# anki-chinese-learning

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  eslint.config.js  fill_anki_auto.sh  jest.config.cjs  media  package-lock.json  package.json  preload.sh  pyproject.toml  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.react-router/types/: +register.ts  +routes.ts
anki/: README.txt
anki/connect-dots/: back-template.html  deploy.py  front-template.html  styling.css
app/: app.css  root.tsx  routes.ts
app/apis/: anki.ts  claude.ts  google_genai.ts
app/components/: AdvanceCardsManager.tsx  AnkiAudioPlayer.tsx  AnkiContentRenderer.tsx  AnkiHtmlStats.tsx  CandidateBadge.tsx  CharCard.tsx  CharConflictSections.tsx  CharList.tsx  Claude.tsx  DarkModeToggle.tsx  DongCharacterDisplay.README.md  DongCharacterDisplay.tsx  DongCharacterLoader.tsx  FingerVisualization.tsx  GenerateAudio.tsx  HackChineseOutlierDisplay.tsx  HanziText.tsx  HanziYuanDisplay.tsx  Integrity.tsx  Learn.tsx  LoadingProgressBar.tsx  Migration.tsx  Modal.tsx  MorePhrases.tsx  POSDisplay.tsx  Pagination.tsx  Phrase.tsx  PhraseConflictSections.tsx  PhrasesImport.tsx  PhrasesProcess.tsx  PinyinCell.tsx  PinyinTable.tsx  PinyinText.tsx  PlecoOutlierDisplay.tsx  Practice.tsx  PracticeTypes.tsx  Problematic.tsx  PropAutocomplete.tsx  PropCard.tsx  PropList.tsx  (+19 more)
app/data/: cards.ts  char_conflicts.ts  character_tags.ts  characters.ts  integrity_checks.ts  phrases.ts  pinyin_function.ts  pinyin_table.json  pinyin_table.ts  pos.json  pos.ts  pos.txt  problematic.ts  props.ts  status.ts  types.ts  utils.ts  weak_chars.ts  zhuyin.ts
app/hooks/: useDongCharacter.ts  useHackChineseOutlier.ts  useHanziYuanCharacter.ts  usePlecoOutlier.ts  usePlecoOutlierDictionary.ts  useRtegaCharacter.ts  useSoundComponentCandidates.ts  useSoundComponentUpdate.ts  useYellowBridgeCharacter.ts  useYellowBridgeIndexes.ts
app/routes/: actors.tsx  advance_cards.tsx  chars.tsx  chars_multiple_pronunciation.tsx  chars_sentence_input.tsx  conflicts.tsx  dev_files.tsx  dong_demo.tsx  exam_level.tsx  help.tsx  homophones.tsx  index.tsx  integrity.tsx  invalid_data.tsx  migration.tsx  phrase_conflicts.tsx  phrases.tsx  phrases_import.tsx  phrases_more.tsx  phrases_process.tsx  pinyin.tsx  places.tsx  practice.tsx  problematic.tsx  pronunciation.tsx  props.tsx  settings.tsx  sibling_cards.tsx  similar_props.tsx  sound_components.tsx  sound_eval.tsx  stats.tsx  stats_progress.tsx  story.tsx  study.tsx  study_weak_chars.tsx  tags.tsx  test1.tsx  todo_chars.tsx  tones.tsx  (+1 more)
app/routes/actor/: $actorName.tsx
app/routes/char/: $charHanzi.tsx
app/routes/phrase/: $phraseHanzi.tsx
app/routes/place/: $placeName.tsx
app/routes/prop/: $propName.tsx
app/routes/sylable/: $sylable.tsx
app/routes/tag/: $tagName.tsx
app/routes/tone/: $toneName.tsx
app/settings/: SettingsContext.tsx  schema.ts
app/toolbar/: frame.tsx  section.tsx  toolbar.tsx
app/types/: dong_character.ts  hackchinese_outlier.ts  hanziyuan_character.ts  pleco_outlier.ts  rtega_character.ts  yellowbridge_character.ts
app/utils/: SOUND_SIMILARITY_README.md  array.ts  keyboard.ts  localStorage.ts  pinyin.ts  pinyin_zhuyin.ts  sound_component_helpers.ts  sound_similarity.test.ts  sound_similarity.ts  sound_similarity_demo.ts  text.ts  zhuyin.ts  zhuyin_typing_mapping.ts
app/welcome/: welcome.tsx
data/: frequency.csv  table-initial-final.csv
data/dong/: wang_look_at.json
data/tocfl/20240923/: 入門級(Level 1)-Table 1.csv  基礎級(Level 2)-Table 1.csv  流利級(Level 5)-Table 1.csv  準備級一級(Novice 1)-Table 1.csv  準備級二級(Novice 2)-Table 1.csv  進階級(Level 3)-Table 1.csv  高階級(Level 4)-Table 1.csv
public/data/dong/: ren_endure.json  tou_head.json  wei_do.json  xi_hope.json  xia_summer.json  zhe_one_who.json  zhi_stop.json
public/tone_trainer/: README.md  README_REACT.md  SETUP.md  audio.js  index.html  index4.html  main.jsx  output.css  package-lock.json  package.json  tone_analyzer.js  tsconfig.json  vite.config.js  vite.config.ts
public/tone_trainer/audio/: human_我一歲了.m4a  human_我喜歡吃東西.m4a
public/tone_trainer/components/: App.jsx  App.tsx  AudioFilesList.jsx  AudioFilesList.tsx  AudioVisualizerPanel.tsx  CollapsibleSection.jsx  CollapsibleSection.tsx  DebugTools.jsx  DebugTools.tsx  DisplayControls.jsx  DisplayControls.tsx  DropOverlay.jsx  DropOverlay.tsx  (+18 more)
scripts/: populate_dong_chars.py
utils/: convert_pinyin_table.py  distribute_reviews.py  sync_ankiweb.py
utils/audio/: normalize_loudness.py
utils/dong/: augment_data.py  download_images.py  fill_dong_chinese.py  populate_dong_chars.py  preload_missing_chars.py  translate.py
utils/hackchinese/: convert.py  fill_example_sentences.py  fill_hackchinese_outlier.py  preload_missing.py
utils/hanzi/: add_my_word.py  clean_notes.py  connect_dots_notes.py  fill_hanzi_chars.py  fill_hanzi_notes.py  fill_props_field.py  frequent_suspended_chars.py  process_simplified_cards.py  query_traditional.py  test_connect_dots_notes.py
utils/hanziyuan/: convert.py  preload_missing_chars.py
utils/pleco/: README.md  outlier_copy_paste.py
utils/props/: fill_props_field.py
utils/rtega/: fill_rtega_mnemonics.py  parse_rtega_html.py  preload_missing_chars.py
utils/shared/: __init__.py  anki_utils.py  character_conversion.py  character_discovery.py  dictionary_utils.py  gemini_utils.py  phrase_utils.py  pinyin_utils.py
utils/stats/: 2.py
utils/tocfl/: get_from_csv.py
utils/tone_trainer/: convert_audio_to_base64.py  index1.html  index4.html
utils/tts/: fill_audio_anki.py  gcloud_api_key.txt  gen_sentences.py
utils/yellowbridge/: README.md  convert.py  fill_yellowbridge_chinese.py  preload_missing_chars.py
utils/zhuyin/: fill_zhuyin_anki.py
(+74 files in other folders)
