[project]
name = "anki-chinese-learning-utils"
version = "0.1.0"
description = "Python utilities for the Anki Chinese learning companion app"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "dragonmapper",
    "hanziconv",
    "opencc-python-reimplemented",
    "chinese-english-lookup",
    "pypinyin",
    "google-cloud-texttospeech",
]

[dependency-groups]
dev = [
    "pytest",
    "pyright",
    "pyrefly",
    "ruff",
]

[tool.ruff]
target-version = "py311"
src = ["utils"]

[tool.pyright]
include = ["utils"]
extraPaths = ["utils"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

# Ignore third-party libraries without stubs
reportMissingTypeStubs = false
reportMissingImports = "warning"

# Allow use of "requests" and "dragonmapper" without type annotations
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"

# Pyrefly is used by the Zed editor for in-editor type checking. Keep its scope
# in sync with the files checked by the `typecheck:python` npm script (and the
# `typecheck:pyrefly` script) so the editor and CI report the same diagnostics.
[tool.pyrefly]
project-includes = [
    "utils/hanzi/fill_hanzi_chars.py",
    "utils/hanzi/process_simplified_cards.py",
    "utils/hanzi/connect_dots_notes.py",
    "utils/hanzi/test_connect_dots_notes.py",
    "utils/tts/fill_audio_anki.py",
]
# `utils/hanzi` and `utils/tts` are on the search path because the scripts are
# run via `uv run --script <file>`, which puts each script's own directory on
# `sys.path` (so e.g. the test imports `connect_dots_notes` as a top-level
# module). Mirror that here so sibling imports resolve.
search-path = ["utils", "utils/hanzi", "utils/tts"]
python-version = "3.11"

[tool.pyrefly.errors]
# Mirror the pyright settings above: third-party libs without stubs are fine.
missing-import = "warn"
implicit-any = "warn"
untyped-import = "ignore"
