[project]
name = "anki-chinese-learning-utils"
version = "0.1.0"
description = "Python utilities for the Anki Chinese learning companion app"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "dragonmapper",
    "hanziconv",
    "opencc-python-reimplemented",
    "chinese-english-lookup",
    "pypinyin",
    "google-cloud-texttospeech",
    "beautifulsoup4",
    "lxml",
]

[dependency-groups]
dev = [
    "pytest",
    "pyrefly",
    "ruff",
    "types-requests",
]

[tool.ruff]
target-version = "py311"
src = ["utils"]
line-length = 140

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (unused imports, undefined names, etc.)
    "I",      # isort (import ordering)
    "N",      # pep8-naming (naming conventions)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bug patterns)
    "C4",     # flake8-comprehensions (better comprehensions)
    "SIM",    # flake8-simplify (code simplifications)
    "RUF",    # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pyrefly is used by the Zed editor for in-editor type checking. Keep its scope
# in sync with the files checked by the `typecheck:python` npm script (and the
# `typecheck:pyrefly` script) so the editor and CI report the same diagnostics.
[tool.pyrefly]
project-includes = [
    "utils/**/*.py",
    "anki/**/*.py",
]
# Each script is run via `uv run --script <file>`, which puts the script's own
# directory on `sys.path` (so e.g. the test imports `connect_dots_notes` as a
# top-level module). Mirror that here so sibling imports resolve.
search-path = ["utils", "utils/hanzi", "utils/tts", "utils/shared"]
python-version = "3.11"

[tool.pyrefly.errors]
missing-import = "error"
implicit-any = "error"
untyped-import = "error"
